# mini-wal

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  go.mod  wal.go
examples/: BUILD  main.go
internal/: BUILD  config.go  const.go  segments.go  types.go  wal.go  wal_test.go
proto/: BUILD  pb_utils.go  wal.pb.go  wal.proto
proto/wal_pb/: wal.pb.go
scripts/: run_proto.sh
